--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,9 +1,10 @@
-baseurl = "https://example.org/"
+baseurl = "/"
 title = "Creative portfolio"
 theme = "hugo-creative-portfolio-theme"
 languageCode = "en-us"
 #for Fleek hosting
-relativeURLs = "true"
+relativeUrls = "true"
+paginate = 5
 
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
